--- a/assets/_sass/_site.scss
+++ b/assets/_sass/_site.scss
@@ -4,6 +4,17 @@
     z-index: 1;
     position: relative;
   }
+  width: 30%;
+  height: 100%;
+  position: relative;
+  display: table;
+  > div {
+    display: table-cell;
+    vertical-align: middle;
+  }
+  .content {
+    height: 100%;
+  }
 }
 
 .block-right {
@@ -11,9 +22,8 @@
   overflow-y: auto;
 }
 
-.block-left,
 .block-right {
-  width: 50%;
+  width: 70%;
   height: 100%;
   position: relative;
   display: table;
